--- a/src/Consultant.WebApi/Consultant.WebApi.csproj
+++ b/src/Consultant.WebApi/Consultant.WebApi.csproj
@@ -5,6 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="wwwroot\**" />
+    <Content Remove="wwwroot\**" />
+    <EmbeddedResource Remove="wwwroot\**" />
+    <None Remove="wwwroot\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.*" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="2.0.*" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="1.1.0" />
@@ -12,10 +19,6 @@
 
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="wwwroot\" />
   </ItemGroup>
 
   <ItemGroup>
